--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,13 +9,13 @@
  <h1>Responsive Layout</h1>
 
  <div class="row">
-  <section>
+  <section class="col-lg-4 col-md-6 col-sm-12">
    <p>lorem ipsum</p>
   </section>
-  <section>
+  <section class="col-lg-4 col-md-6 col-sm-12">
    <p>lorem ipsum</p>
   </section>
-  <section>
+  <section class="col-lg-4 col-md-6 col-sm-12">
    <p>lorem ipsum</p>
   </section>
  </div>
