--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,7 +7,7 @@
  <title>Module 2 Solution</title>
 </head>
 <body>
- <h1>Responsive Layout</h1>
+ <h1>Module 2 Solution</h1>
 
  <div class="row">
   <section class="col-lg-4 col-md-6 col-sm-12">
