--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,15 +10,24 @@
  <h1>Module 2 Solution</h1>
 
  <div class="row">
-  <section class="col-lg-4 col-md-6 col-sm-12">
-   <p>lorem ipsum</p>
-  </section>
-  <section class="col-lg-4 col-md-6 col-sm-12">
-   <p>lorem ipsum</p>
-  </section>
-  <section class="col-lg-4 col-md-6 col-sm-12">
-   <p>lorem ipsum</p>
-  </section>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+   <div class="section">
+    <p class="food">Chicken</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
+   </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+   <div class="section">
+    <p class="food">Beef</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
+   </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+   <div class="section">
+    <p class="food">Sushi</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
+   </div>
+  </div>
  </div>
 
 </body>
