--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -12,19 +12,19 @@
  <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
    <div class="section">
-    <p class="food">Chicken</p>
+    <p class="chicken">Chicken</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
    </div>
   </div>
   <div class="col-lg-4 col-md-6 col-sm-12">
    <div class="section">
-    <p class="food">Beef</p>
+    <p class="beef">Beef</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
    </div>
   </div>
   <div class="col-lg-4 col-md-6 col-sm-12">
    <div class="section">
-    <p class="food">Sushi</p>
+    <p class="sushi">Sushi</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
    </div>
   </div>
